--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,9 @@
-input[type=text] {
-	width: 100%;
-	padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+body {
+	background-image: url('../images/footer_lodyas.png');
 }
 
-input[type=submit] {
-	background-color: #4aaaa5;
-    border: none;
-    color: white;
-    padding: 10px 32px;
-    width: 140px;
-    margin: 10px 0px;
-    font-size: 120%;
-    cursor: pointer;
+p {
+	margin: 20px;
 }
 
 form {
@@ -30,15 +20,13 @@ textarea {
 	width: 100%;
 }
 
-footer {
-	position: fixed;
-    bottom: 0;
-    width: 100%;
-	background-color: #666666;
-	border-top: 10px solid #4aaaa5;
-	color: #cccccc;
-	height: 75px;
-	z-index: 3;
+.greyBack {
+	background-color: #313539;
+	border: 1px solid #484e55;
+}
+
+.btn-lg {
+	margin-bottom: 20px;
 }
 
 .portImg {
@@ -69,15 +57,26 @@ footer {
     bottom: 5%;
     left: 0;
     width: 100%;
-    color: #fff;
-    background-color: #4aaaa5;
+    color: #c8c8c8;
+    background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
 }
 
 .xtraMargin {
 	margin: 50px;
 }
-.foot {
-	position: absolute;
-	top: 40%;
-	left:45%;
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    color: #c8c8c8;
+    background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
+}
+
+.vcenter {
+	line-height: 30px;
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
 }
